[package]
name = "rsa"
version = "0.1.0"
edition = "2024"

[dependencies]
num = { version = "0.4.3", features = ["rand", "num-bigint"] }
dirs = "6.0.0"
log = "0.4.25"
rand = "0.8.5"
clap = { version = "4.5.29", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
tqdm = "0.7.0"
