[package]
name = "rsa"
version = "0.1.1"
edition = "2024"
authors = ["Akari202 <akaritwo0two@gmail.com>"]
repository = "https://github.com/Akari202/rsa"

[dependencies]
num = { version = "0.4.3", features = ["rand", "num-bigint"] }
dirs = "6.0.0"
log = "0.4.25"
rand = "0.8.5"
clap = { version = "4.5.29", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
rayon = "1.10.0"
